@@ -6,6 +6,9 @@ import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.data.redis.core.RedisCallback;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import teektok.VO.PageResult;
@@ -29,17 +32,17 @@ import teektok.mapper.VideoLikeMapper;
 import teektok.mapper.VideoMapper;
 import teektok.mapper.VideoStatMapper;
 import teektok.mapper.RelationMapper;
+import teektok.service.IUserService;
 import teektok.service.IVideoService;
 import teektok.utils.AliyunOSSOperator;
 import teektok.utils.BaseContext;
 
 import java.io.IOException;
 import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executor;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -61,6 +64,20 @@ public class VideoServiceImpl extends ServiceImpl<VideoMapper, Video> implements
     private VideoFavoriteMapper videoFavoriteMapper;
     @Autowired
     private RelationMapper relationMapper;
+    @Autowired
+    private IUserService userService;
+    @Autowired
+    @Qualifier("commonExecutor") // 引用 ThreadPoolConfig 中的 bean
+    private Executor commonExecutor;
+
+    @Autowired
+    private RedisTemplate<String, Object> redisTemplate;
+
+    // Redis Key 常量 (需与 BehaviorService 保持一致)
+    private static final String VIDEO_STAT_KEY = "video:stat:";
+    private static final String USER_LIKE_KEY = "user:like:";
+    private static final String USER_FAVORITE_KEY = "user:favorite:";
+    private static final String USER_FOLLOW_KEY = "user:follow:"; // 假设关注也做了缓存
 
     @Override
     public void upload(VideoUploadDTO videoUploadDTO,Long uploaderId) throws Exception {
@@ -107,121 +124,89 @@ public class VideoServiceImpl extends ServiceImpl<VideoMapper, Video> implements
         stat.setShareCount(0L);
         stat.setFavoriteCount(0L);
         videoStatMapper.insert(stat);
+
+        // 【优化】预热 Redis 统计数据
+        // 上传完立刻把 0 写进 Redis，这样用户刷到时直接读 Redis，不用回源 DB
+        Map<String, Object> map = new HashMap<>();
+        map.put("playCount", 0);
+        map.put("likeCount", 0);
+        map.put("commentCount", 0);
+        map.put("shareCount", 0);
+        map.put("favoriteCount", 0);
+        redisTemplate.opsForHash().putAll(VIDEO_STAT_KEY + video.getId(), map);
+        redisTemplate.expire(VIDEO_STAT_KEY + video.getId(), 24, TimeUnit.HOURS);
     }
 
     @Override
     public PageResult<VideoVO> list(VideoQueryDTO dto) {
-
-        // 设置分页参数,默认值：page=1, size=10
         int current = (dto.getPage() != null) ? dto.getPage() : 1;
         int size = (dto.getSize() != null) ? dto.getSize() : 10;
         Page<Video> page = new Page<>(current, size);
 
+        // 1. 分页查 DB (只查 Video 主表)
         LambdaQueryWrapper<Video> queryWrapper = new LambdaQueryWrapper<>();
         queryWrapper.orderByDesc(Video::getCreateTime);
-
-        // 执行分页查询，此时 MyBatis-Plus 会将 count 结果写回 page 对象
         this.page(page, queryWrapper);
-        //提取所有视频id
-        List<Long> videoIds = page.getRecords().stream()
-                .map(Video::getId)
-                .toList();
 
-        // 提取所有上传者ID
-        List<Long> uploaderIds = page.getRecords().stream()
-                .map(Video::getUploaderId)
-                .distinct()
-                .toList();
-        
-        // 批量查询用户信息
-        Map<Long, User> userMap;
-        if (!uploaderIds.isEmpty()) {
-            List<User> users = userMapper.selectBatchIds(uploaderIds);
-            userMap = users.stream().collect(Collectors.toMap(User::getId, Function.identity()));
-        } else {
-            userMap = Collections.emptyMap();
+        if (page.getRecords().isEmpty()) {
+            return new PageResult<>(Collections.emptyList(), page.getTotal());
         }
-
-        // 3. 批量查询统计数据 (VideoStat 表) -> SELECT * FROM video_stat WHERE video_id IN (...)
-        List<VideoStat> stats = videoIds.isEmpty() ? Collections.emptyList() : videoStatMapper.selectBatchIds(videoIds);
-        // 4. 将统计数据转为 Map，key 是 videoId，value 是 VideoStat 对象，方便后续查找
-        Map<Long, VideoStat> statMap = stats.stream()
-                .collect(Collectors.toMap(VideoStat::getVideoId, Function.identity()));
 
         Long currentUserId = BaseContext.getCurrentId();
-        Set<Long> tempLikedVideoIds;
-        if (currentUserId != null && !videoIds.isEmpty()) {
-            List<VideoLike> likes = videoLikeMapper.selectList(new LambdaQueryWrapper<VideoLike>()
-                    .eq(VideoLike::getUserId, currentUserId)
-                    .in(VideoLike::getVideoId, videoIds));
-            tempLikedVideoIds = likes.stream().map(VideoLike::getVideoId).collect(Collectors.toSet());
-        } else {
-            tempLikedVideoIds = Collections.emptySet();
-        }
-        Set<Long> likedVideoIds = tempLikedVideoIds;
 
-        // 4.5 批量查询收藏状态
-        Set<Long> tempFavoritedVideoIds;
-        if (currentUserId != null && !videoIds.isEmpty()) {
-            List<VideoFavorite> favorites = videoFavoriteMapper.selectList(new LambdaQueryWrapper<VideoFavorite>()
-                    .eq(VideoFavorite::getUserId, currentUserId)
-                    .in(VideoFavorite::getVideoId, videoIds));
-            tempFavoritedVideoIds = favorites.stream().map(VideoFavorite::getVideoId).collect(Collectors.toSet());
-        } else {
-            tempFavoritedVideoIds = Collections.emptySet();
-        }
-        Set<Long> favoritedVideoIds = tempFavoritedVideoIds;
+        // 2. 【补全逻辑】批量查询“是否关注作者” (复用原本的数据库查询逻辑)
+        // 这一步是为了保证 isFollowed 字段不为空
+        Set<Long> followedUploaderIds = new HashSet<>();
+        if (currentUserId != null) {
+            // 提取当前页所有作者ID
+            List<Long> uploaderIds = page.getRecords().stream()
+                    .map(Video::getUploaderId)
+                    .distinct() // 去重
+                    .collect(Collectors.toList());
 
-        // 4.6 批量查询关注状态
-        Set<Long> tempFollowedUploaderIds;
-        if (currentUserId != null && !uploaderIds.isEmpty()) {
-            List<Relation> relations = relationMapper.selectList(new LambdaQueryWrapper<Relation>()
-                    .eq(Relation::getUserId, currentUserId)
-                    .in(Relation::getTargetId, uploaderIds));
-            tempFollowedUploaderIds = relations.stream().map(Relation::getTargetId).collect(Collectors.toSet());
-        } else {
-            tempFollowedUploaderIds = Collections.emptySet();
+            if (!uploaderIds.isEmpty()) {
+                List<Relation> relations = relationMapper.selectList(new LambdaQueryWrapper<Relation>()
+                        .eq(Relation::getUserId, currentUserId)
+                        .in(Relation::getTargetId, uploaderIds));
+                followedUploaderIds = relations.stream()
+                        .map(Relation::getTargetId)
+                        .collect(Collectors.toSet());
+            }
         }
-        Set<Long> followedUploaderIds = tempFollowedUploaderIds;
 
-        // 5. 组装数据
+        // 3. 组装 VO
+        Set<Long> finalFollowedUploaderIds = followedUploaderIds; // Lambda 需要 final 变量
         List<VideoVO> voList = page.getRecords().stream().map(video -> {
             VideoVO vo = toVO(video);
-            
-            // 填充用户信息
-            User user = userMap.get(video.getUploaderId());
+
+            // A. 填充用户信息 (走 Redis 缓存)
+            User user = userService.getUserCached(video.getUploaderId());
             if (user != null) {
                 vo.setUploaderName(user.getUsername());
                 vo.setUploaderAvatar(user.getAvatar());
-            } else {
-                log.warn("Video {} has uploaderId {} but user not found in map", video.getId(), video.getUploaderId());
             }
 
-            // 从 Map 中获取对应的统计数据
-            VideoStat stat = statMap.get(video.getId());
-            if (stat != null) {
-                vo.setPlayCount(stat.getPlayCount());
-                vo.setLikeCount(stat.getLikeCount());
-                vo.setCommentCount(stat.getCommentCount());
-                vo.setShareCount(stat.getShareCount());
-                vo.setFavoriteCount(stat.getFavoriteCount());
+            // B. 填充统计数据 (走 Redis 计数，比数据库更实时)
+            fillVideoStatsFromRedis(vo);
+
+            // C. 填充互动状态
+            if (currentUserId != null) {
+                // 判断点赞 (查 Redis Set)
+                vo.setIsLiked(Boolean.TRUE.equals(redisTemplate.opsForSet().isMember(USER_LIKE_KEY + currentUserId, video.getId().toString())));
+                // 判断收藏 (查 Redis Set)
+                vo.setIsFavorited(Boolean.TRUE.equals(redisTemplate.opsForSet().isMember(USER_FAVORITE_KEY + currentUserId, video.getId().toString())));
+                // 判断关注 (查刚刚的 DB 结果)
+                vo.setIsFollowed(finalFollowedUploaderIds.contains(video.getUploaderId()));
             } else {
-                // 如果没有统计数据，给默认值 0
-                vo.setPlayCount(0L);
-                vo.setLikeCount(0L);
-                vo.setCommentCount(0L);
-                vo.setShareCount(0L);
-                vo.setFavoriteCount(0L);
+                // 未登录状态全部为 false
+                vo.setIsLiked(false);
+                vo.setIsFavorited(false);
+                vo.setIsFollowed(false);
             }
-            vo.setIsLiked(likedVideoIds.contains(video.getId()));
-            vo.setIsFavorited(favoritedVideoIds.contains(video.getId()));
-            vo.setIsFollowed(followedUploaderIds.contains(video.getUploaderId()));
             return vo;
-        }).toList();
-        // 返回分页结果
+        }).collect(Collectors.toList());
+
         return new PageResult<>(voList, page.getTotal());
-
-
     }
 
     private VideoVO toVO(Video video) {
@@ -235,24 +220,6 @@ public class VideoServiceImpl extends ServiceImpl<VideoMapper, Video> implements
         return vo;
     }
 
-    /*@Override
-    @Transactional
-    public void play(PlayDTO playDTO) {
-        // 1. 记录用户播放行为
-        UserBehavior behavior = new UserBehavior();
-        behavior.setVideoId(playDTO.getVideoId());
-        behavior.setUserId(BaseContext.getCurrentId()); // 实际开发中应从上下文获取当前登录用户ID
-        behavior.setBehaviorType(1); // 假设 1 代表播放行为
-        behavior.setCreateTime(LocalDateTime.now());
-        userBehaviorMapper.insert(behavior);
-
-        // 2. 更新视频统计数据 (播放量 +1)
-        // 使用 MyBatis-Plus 的 update 语句直接在数据库层面 +1，避免并发竞争问题
-        videoStatMapper.update(null, new LambdaUpdateWrapper<VideoStat>()
-                .eq(VideoStat::getVideoId, playDTO.getVideoId())
-                .setSql("play_count = play_count + 1"));
-    }*/
-
     @Override
     public List<RecommendVideoVO> getVideoRecommendVOs(List<Long> videoIds) {
         return List.of();
@@ -260,57 +227,54 @@ public class VideoServiceImpl extends ServiceImpl<VideoMapper, Video> implements
 
     @Override
     public VideoVO getDetail(Long videoId) {
-        // 1. 查询视频实体
+        // 1. 查询视频实体(主键查询，速度快，暂不需要优化)
         Video video = this.getById(videoId);
         if (video == null) {
             throw new RuntimeException("视频不存在");
         }
+
         // 2. 转换 VO
         VideoVO vo = toVO(video);
 
-        // 填充用户信息
-        User user = userMapper.selectById(video.getUploaderId());
+        // 3. 【优化】填充用户信息 (走 Redis 缓存)
+        User user = userService.getUserCached(video.getUploaderId());
         if (user != null) {
             vo.setUploaderName(user.getUsername());
             vo.setUploaderAvatar(user.getAvatar());
         } else {
-            log.warn("Video {} has uploaderId {} but user not found in DB", videoId, video.getUploaderId());
+            // 缓存穿透或用户不存在时的兜底
+            vo.setUploaderName("未知用户");
         }
 
-        // 3. 补充统计数据
-        VideoStat stat = videoStatMapper.selectById(videoId);
-        if (stat != null) {
-            vo.setPlayCount(stat.getPlayCount());
-            vo.setLikeCount(stat.getLikeCount());
-            vo.setCommentCount(stat.getCommentCount());
-            vo.setShareCount(stat.getShareCount());
-            vo.setFavoriteCount(stat.getFavoriteCount());
-        } else {
-            vo.setPlayCount(0L);
-            vo.setLikeCount(0L);
-            vo.setCommentCount(0L);
-            vo.setShareCount(0L);
-            vo.setFavoriteCount(0L);
-        }
+        // 4. 【优化】填充统计数据 (走 Redis，确保与列表页数据一致)
+        fillVideoStatsFromRedis(vo);
 
+        // 5. 【优化】填充互动状态 (Redis > DB)
         Long currentUserId = BaseContext.getCurrentId();
-        boolean isLiked = false;
-        boolean isFavorited = false;
-        boolean isFollowed = false;
+
         if (currentUserId != null) {
-            isLiked = videoLikeMapper.exists(new LambdaQueryWrapper<VideoLike>()
-                    .eq(VideoLike::getUserId, currentUserId)
-                    .eq(VideoLike::getVideoId, videoId));
-            isFavorited = videoFavoriteMapper.exists(new LambdaQueryWrapper<VideoFavorite>()
-                    .eq(VideoFavorite::getUserId, currentUserId)
-                    .eq(VideoFavorite::getVideoId, videoId));
-            isFollowed = relationMapper.exists(new LambdaQueryWrapper<Relation>()
+            // A. 点赞状态：查 Redis Set
+            // 注意：Redis Set 中存的是 String 类型的 videoId
+            Boolean isLiked = redisTemplate.opsForSet().isMember(USER_LIKE_KEY + currentUserId, videoId.toString());
+            vo.setIsLiked(Boolean.TRUE.equals(isLiked));
+
+            // B. 收藏状态：查 Redis Set
+            Boolean isFavorited = redisTemplate.opsForSet().isMember(USER_FAVORITE_KEY + currentUserId, videoId.toString());
+            vo.setIsFavorited(Boolean.TRUE.equals(isFavorited));
+
+            // C. 关注状态：目前维持查 DB (因为 Relation 模块尚未实现纯 Redis 缓存)
+            // 单次主键/索引查询性能尚可
+            boolean isFollowed = relationMapper.exists(new LambdaQueryWrapper<Relation>()
                     .eq(Relation::getUserId, currentUserId)
                     .eq(Relation::getTargetId, video.getUploaderId()));
+            vo.setIsFollowed(isFollowed);
+        } else {
+            // 未登录全部为 false
+            vo.setIsLiked(false);
+            vo.setIsFavorited(false);
+            vo.setIsFollowed(false);
         }
-        vo.setIsLiked(isLiked);
-        vo.setIsFavorited(isFavorited);
-        vo.setIsFollowed(isFollowed);
+
         return vo;
     }
 
@@ -367,61 +331,52 @@ public class VideoServiceImpl extends ServiceImpl<VideoMapper, Video> implements
 
         // 2. 提取 uploaderIds
         List<Long> uploaderIds = orderedVideos.stream().map(Video::getUploaderId).distinct().toList();
-        Map<Long, User> userMap;
+        Map<Long, User> userMap = Collections.emptyMap();;
         if (!uploaderIds.isEmpty()) {
+            // 这里也可以优化为循环调用 userService.getUserCached，但批量查库通常性能可以接受
             userMap = userMapper.selectBatchIds(uploaderIds).stream().collect(Collectors.toMap(User::getId, Function.identity()));
-        } else {
-            userMap = Collections.emptyMap();
         }
 
-        // 3. 批量查询统计数据
-        List<VideoStat> stats = videoStatMapper.selectBatchIds(videoIds);
-        Map<Long, VideoStat> statMap = stats.stream().collect(Collectors.toMap(VideoStat::getVideoId, Function.identity()));
+        // 3. 【优化】批量从 Redis 获取统计数据 (Pipeline)
+        Map<Long, VideoStat> statMap = batchGetVideoStatsFromRedis(videoIds);
 
-        // 4. 批量查询当前用户的点赞/收藏状态
+        // 4. 【优化】批量从 Redis 获取交互状态 (Pipeline)
         Long currentUserId = BaseContext.getCurrentId();
-        Set<Long> tempLikedVideoIds;
-        Set<Long> tempFavoritedVideoIds;
+        Map<Long, Boolean> likedMap = new HashMap<>();
+        Map<Long, Boolean> favoritedMap = new HashMap<>();
         
         if (currentUserId != null) {
-             List<VideoLike> likes = videoLikeMapper.selectList(new LambdaQueryWrapper<VideoLike>()
-                    .eq(VideoLike::getUserId, currentUserId)
-                    .in(VideoLike::getVideoId, videoIds));
-            tempLikedVideoIds = likes.stream().map(VideoLike::getVideoId).collect(Collectors.toSet());
-
-            List<VideoFavorite> favorites = videoFavoriteMapper.selectList(new LambdaQueryWrapper<VideoFavorite>()
-                    .eq(VideoFavorite::getUserId, currentUserId)
-                    .in(VideoFavorite::getVideoId, videoIds));
-            tempFavoritedVideoIds = favorites.stream().map(VideoFavorite::getVideoId).collect(Collectors.toSet());
-        } else {
-            tempLikedVideoIds = Collections.emptySet();
-            tempFavoritedVideoIds = Collections.emptySet();
+            likedMap = batchGetInteractionStatus(USER_LIKE_KEY + currentUserId, videoIds);
+            favoritedMap = batchGetInteractionStatus(USER_FAVORITE_KEY + currentUserId, videoIds);
         }
-        Set<Long> likedVideoIds = tempLikedVideoIds;
-        Set<Long> favoritedVideoIds = tempFavoritedVideoIds;
 
-        // 4.5 批量查询关注状态
-        Set<Long> tempFollowedUploaderIds;
+        // 5 批量查询关注状态
+        // 关注关系较复杂，暂维持查库，或者需要 RelationService 提供 Redis 接口
+        Set<Long> followedUploaderIds = new HashSet<>();
         if (currentUserId != null && !uploaderIds.isEmpty()) {
             List<Relation> relations = relationMapper.selectList(new LambdaQueryWrapper<Relation>()
                     .eq(Relation::getUserId, currentUserId)
                     .in(Relation::getTargetId, uploaderIds));
-            tempFollowedUploaderIds = relations.stream().map(Relation::getTargetId).collect(Collectors.toSet());
-        } else {
-            tempFollowedUploaderIds = Collections.emptySet();
+            followedUploaderIds = relations.stream().map(Relation::getTargetId).collect(Collectors.toSet());
         }
-        Set<Long> followedUploaderIds = tempFollowedUploaderIds;
 
         // 5. 组装 VO
+        Map<Long, User> finalUserMap = userMap;
+        Map<Long, Boolean> finalLikedMap = likedMap;
+        Map<Long, Boolean> finalFavoritedMap = favoritedMap;
+        Set<Long> finalFollowedUploaderIds = followedUploaderIds;
+
         List<VideoVO> voList = orderedVideos.stream().map(video -> {
             VideoVO vo = toVO(video);
-            
-            User user = userMap.get(video.getUploaderId());
+
+            // 用户
+            User user = finalUserMap.get(video.getUploaderId());
             if (user != null) {
                 vo.setUploaderName(user.getUsername());
                 vo.setUploaderAvatar(user.getAvatar());
             }
 
+            // 视频数据统计 (来自 Redis)
             VideoStat stat = statMap.get(video.getId());
             if (stat != null) {
                 vo.setPlayCount(stat.getPlayCount());
@@ -430,18 +385,175 @@ public class VideoServiceImpl extends ServiceImpl<VideoMapper, Video> implements
                 vo.setShareCount(stat.getShareCount());
                 vo.setFavoriteCount(stat.getFavoriteCount());
             } else {
-                vo.setPlayCount(0L);
-                vo.setLikeCount(0L);
-                vo.setCommentCount(0L);
-                vo.setShareCount(0L);
-                vo.setFavoriteCount(0L);
+                vo.setPlayCount(0L); vo.setLikeCount(0L); vo.setCommentCount(0L); vo.setShareCount(0L); vo.setFavoriteCount(0L);
             }
-            vo.setIsLiked(likedVideoIds.contains(video.getId()));
-            vo.setIsFavorited(favoritedVideoIds.contains(video.getId()));
-            vo.setIsFollowed(followedUploaderIds.contains(video.getUploaderId()));
+
+            // 用户与视频交互状态
+            vo.setIsLiked(finalLikedMap.getOrDefault(video.getId(), false));
+            vo.setIsFavorited(finalFavoritedMap.getOrDefault(video.getId(), false));
+            vo.setIsFollowed(finalFollowedUploaderIds.contains(video.getUploaderId()));
+
             return vo;
         }).toList();
 
         return new PageResult<>(voList, total);
+    }
+
+    // ================= 辅助方法: Pipeline 批量读取 =================
+    /**
+     * 【最终版】批量从 Redis 获取视频统计数据
+     * 策略：Cache Aside + 异步预热
+     * 1. 命中缓存：直接返回
+     * 2. 未命中：主线程返回 0 (保证响应速度)，异步线程查 DB 并回写 Redis
+     */
+    private Map<Long, VideoStat> batchGetVideoStatsFromRedis(List<Long> videoIds) {
+        if (videoIds.isEmpty()) return Collections.emptyMap();
+
+        //使用executePipelined批量从redis中读取视频数据统计表的value到results中
+        List<Object> results = redisTemplate.executePipelined((RedisCallback<Object>) connection -> {
+            for (Long vid : videoIds) {
+                String key = VIDEO_STAT_KEY + vid;
+                connection.hGetAll(key.getBytes());
+            }
+            return null;
+        });
+
+        //根据videoIds进行遍历，将数据写进Map<Long, VideoStat>
+        Map<Long, VideoStat> resultMap = new HashMap<>();
+        List<Long> missIds = new ArrayList<>(); // 记录 Redis 里没有的 ID
+
+        for (int i = 0; i < videoIds.size(); i++) {
+            Long vid = videoIds.get(i);
+            Object res = results.get(i);
+
+            if (res instanceof Map && !((Map<?, ?>) res).isEmpty()) {
+                // 命中：解析数据
+                Map<String, Object> hash = (Map<String, Object>) res;
+                VideoStat stat = new VideoStat();
+                stat.setVideoId(vid);
+                stat.setPlayCount(getLong(hash.get("playCount")));
+                stat.setLikeCount(getLong(hash.get("likeCount")));
+                stat.setCommentCount(getLong(hash.get("commentCount")));
+                stat.setShareCount(getLong(hash.get("shareCount")));
+                stat.setFavoriteCount(getLong(hash.get("favoriteCount")));
+                resultMap.put(vid, stat);
+            } else {
+                // 未命中：加入待查列表
+                missIds.add(vid);
+
+                // 【关键】主线程先给个“假”数据 (0)，保证不报错、不阻塞
+                VideoStat zeroStat = new VideoStat();
+                zeroStat.setVideoId(vid);
+                zeroStat.setPlayCount(0L); zeroStat.setLikeCount(0L);
+                zeroStat.setCommentCount(0L); zeroStat.setShareCount(0L); zeroStat.setFavoriteCount(0L);
+                resultMap.put(vid, zeroStat);
+            }
+        }
+
+        // 2. 异步处理未命中的数据 (Fire-and-Forget)
+        if (!missIds.isEmpty()) {
+            CompletableFuture.runAsync(() -> {
+                try {
+                    // A. 查 DB (耗时操作，现在在子线程里，不影响主接口响应)
+                    List<VideoStat> dbStats = videoStatMapper.selectBatchIds(missIds);
+
+                    if (dbStats != null && !dbStats.isEmpty()) {
+                        // B. 回写 Redis
+                        redisTemplate.executePipelined(new org.springframework.data.redis.core.SessionCallback<Object>() {
+                            @Override
+                            public Object execute(org.springframework.data.redis.core.RedisOperations operations) {
+                                for (VideoStat stat : dbStats) {
+                                    String key = VIDEO_STAT_KEY + stat.getVideoId();
+                                    Map<String, Object> map = new HashMap<>();
+                                    map.put("playCount", stat.getPlayCount());
+                                    map.put("likeCount", stat.getLikeCount());
+                                    map.put("commentCount", stat.getCommentCount());
+                                    map.put("shareCount", stat.getShareCount());
+                                    map.put("favoriteCount", stat.getFavoriteCount());
+
+                                    operations.opsForHash().putAll(key, map);
+                                    operations.expire(key, 24, TimeUnit.HOURS);
+                                }
+                                return null;
+                            }
+                        });
+                        log.info("异步预热完成，更新了 {} 个视频的统计数据", dbStats.size());
+                    }
+                } catch (Exception e) {
+                    log.error("异步预热统计数据失败", e);
+                }
+            }, commonExecutor); // 使用你的线程池
+        }
+
+        return resultMap;
+    }
+
+    /**
+     * 使用 Redis Pipeline 批量检查 Set 成员 (用于点赞/收藏状态)
+     */
+    private Map<Long, Boolean> batchGetInteractionStatus(String key, List<Long> videoIds) {
+        if (videoIds.isEmpty()) return Collections.emptyMap();
+
+        //使用executePipelined批量查询
+        List<Object> results = redisTemplate.executePipelined((RedisCallback<Object>) connection -> {
+            for (Long vid : videoIds) {
+                connection.sIsMember(key.getBytes(), vid.toString().getBytes());
+            }
+            return null;
+        });
+
+        Map<Long, Boolean> map = new HashMap<>();
+        for (int i = 0; i < videoIds.size(); i++) {
+            Object res = results.get(i);
+            map.put(videoIds.get(i), res instanceof Boolean && (Boolean) res);
+        }
+        return map;
+    }
+
+    // ================= 辅助方法: 从redis中读取统计数据 =================
+    /**
+     * 【核心】从 Redis 读取统计数据，如果没有则查 DB 并回写
+     */
+    private void fillVideoStatsFromRedis(VideoVO vo) {
+        String key = VIDEO_STAT_KEY + vo.getVideoId();
+        Map<Object, Object> entries = redisTemplate.opsForHash().entries(key);
+
+        //写入VideoVO
+        if (!entries.isEmpty()) {
+            vo.setPlayCount(getLong(entries.get("playCount")));
+            vo.setLikeCount(getLong(entries.get("likeCount")));
+            vo.setCommentCount(getLong(entries.get("commentCount")));
+            vo.setShareCount(getLong(entries.get("shareCount")));
+            vo.setFavoriteCount(getLong(entries.get("favoriteCount")));
+        } else {
+            // 若redis中无记录，回源 DB
+            VideoStat stat = videoStatMapper.selectById(vo.getVideoId());
+            if (stat != null) {
+                vo.setPlayCount(stat.getPlayCount());
+                vo.setLikeCount(stat.getLikeCount());
+                vo.setCommentCount(stat.getCommentCount());
+                vo.setShareCount(stat.getShareCount());
+                vo.setFavoriteCount(stat.getFavoriteCount());
+
+                // 回写 Redis (过期时间 24小时)
+                Map<String, Object> map = new HashMap<>();
+                map.put("playCount", stat.getPlayCount());
+                map.put("likeCount", stat.getLikeCount());
+                map.put("commentCount", stat.getCommentCount());
+                map.put("shareCount", stat.getShareCount());
+                map.put("favoriteCount", stat.getFavoriteCount());
+                redisTemplate.opsForHash().putAll(key, map);
+                redisTemplate.expire(key, 24, TimeUnit.HOURS);
+            }
+        }
+    }
+
+    private Long getLong(Object obj) {
+        if (obj == null) return 0L;
+        try {
+            return Long.valueOf(obj.toString());
+        } catch (NumberFormatException e) {
+            return 0L;
+        }
     }
 }
